css/parser/tests/errors/selector/pseudo-element/between/output.stderr
error: Invalid selector
 --> $DIR/tests/errors/selector/pseudo-element/between/input.css:1:2
  |
1 | : :foo {
  |  ^

